tests/fixtures/compile_errors/break_without_loop.fe
contract Foo:

    pub def bar():
        break